--- a/css/styles.css
+++ b/css/styles.css
@@ -231,9 +231,14 @@ footer {
     flex-direction: column;
     align-items: center;
     border: 4px solid black;
+    background: linear-gradient(90deg, rgba(182,136,222,1) 0%, rgba(237,211,237,1) 35%, rgba(255,255,255,1) 100%);
     padding: 20px;
     margin-bottom: 40px;
     margin-top: 40px;
+    transition: 500ms;
+}
+.cards:hover{
+    transform: scale(1.1);
 }
 .cards p.left {
     text-align: left;
