SEGUNDA ENTREGA DEL PROYECTO FINAL

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,9 @@ section h1{
     width: 100%;
     height: auto;
 }
+.conteiner-img button:hover{
+    background-color: transparent;
+}
 .conteiner-text{
     width: 300px;
 }
